--- a/src/main/resources/templates/index2.html
+++ b/src/main/resources/templates/index2.html
@@ -5,6 +5,6 @@
     <meta http-equiv="Content-Type" content="text\html; charset=UTF-8"/>
 </head>
 <body>
-<p>Hello World</p>
+<p>Привет, мир</p>
 </body>
 </html>
