--- a/src/main/resources/templates/finalToDo.html
+++ b/src/main/resources/templates/finalToDo.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Todo</title>
-    <link rel="stylesheet" href="../static/styles/default.css" />
+    <link rel="stylesheet" type="text/css" href="styles/default.css" media="all"/>
+    <script src="js/mainJS.js" type="text/javascript"></script>
 </head>
 <body>
 
@@ -21,7 +22,7 @@
         </form>
 
         <div class="todos-list">
-            <div class="todos-list_item">
+            <!--<div class="todos-list_item">
                 <div class="custom-checkbox todos-list_item_ready-marker">
                     <input type="checkbox" class="custom-checkbox_target" aria-label="Mark todo as ready" />
                     <div class="custom-checkbox_visual">
@@ -84,7 +85,7 @@
                         <buttom class="todos-list_item_remove" aria-label="Delete todo"></buttom>
                     </div>
                 </div>
-            </div>
+            </div>-->
         </div>
 
 
@@ -92,9 +93,9 @@
             <div class="todos-toolbar_unready-counter">3 items left</div>
 
             <div class="todos-toolbar_filters">
-                <button class="todos-toolbar_filters-item" aria-label="Filter: All, is selected">All</button>
-                <button class="todos-toolbar_filters-item" aria-label="Filter: Active">Active</button>
-                <button class="todos-toolbar_filters-item" aria-label="Filter: Completed">Completed</button>
+                <button class="todos-toolbar_filters-item" id="filter1" aria-label="Filter: All, is selected">All</button>
+                <button class="todos-toolbar_filters-item" id="filter2" aria-label="Filter: Active">Active</button>
+                <button class="todos-toolbar_filters-item" id="filter3" aria-label="Filter: Completed">Completed</button>
             </div>
 
             <button class="todos-toolbar_clear-completed">Clear completed</button>
