--- a/src/main/resources/templates/finalToDo.html
+++ b/src/main/resources/templates/finalToDo.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://ww.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Todo</title>
-    <link rel="stylesheet" href="../static/styles/default.css" />
+    <link rel="stylesheet" type="text/css" href="styles/default.css" media="all"/>
+    <script src="js/mainJS.js" type="text/javascript"></script>
 </head>
 <body>
 
@@ -20,16 +21,16 @@
             </div>
         </form>
 
-        <div class="todos-list">
-            <div class="todos-list_item">
+        <div class="todos-list" th:if="${data != null && data.length > 0}">
+            <div class="todos-list_item" th:each="it : ${data}">
                 <div class="custom-checkbox todos-list_item_ready-marker">
-                    <input type="checkbox" class="custom-checkbox_target" aria-label="Mark todo as ready" />
+                    <input type="checkbox" th:checked="${it.isChecked()}" class="custom-checkbox_target" aria-label="Mark todo as ready" />
                     <div class="custom-checkbox_visual">
                         <div class="custom-checkbox_visual_icon"></div>
                     </div>
                 </div>
                     <div class="todos-list_item_text-w">
-                        <div class="todos-list_item_text" contenteditable="true">HTML</div>
+                        <div class="todos-list_item_text" contenteditable="true" th:text="${it.getDescription()}">Text</div>
                     </div>
                 <div class = "todos-list_item_remove-action">
                     <div class = "todos-list_item_remove-action-fix">
@@ -37,7 +38,8 @@
                     </div>
                 </div>
             </div>
-            <div class="todos-list_item">
+
+            <!--<div class="todos-list_item">
                 <div class="custom-checkbox todos-list_item_ready-marker">
                     <input type="checkbox" class="custom-checkbox_target" aria-label="Mark todo as ready" />
                     <div class="custom-checkbox_visual">
@@ -84,7 +86,7 @@
                         <buttom class="todos-list_item_remove" aria-label="Delete todo"></buttom>
                     </div>
                 </div>
-            </div>
+            </div>-->
         </div>
 
 
@@ -92,9 +94,9 @@
             <div class="todos-toolbar_unready-counter">3 items left</div>
 
             <div class="todos-toolbar_filters">
-                <button class="todos-toolbar_filters-item" aria-label="Filter: All, is selected">All</button>
-                <button class="todos-toolbar_filters-item" aria-label="Filter: Active">Active</button>
-                <button class="todos-toolbar_filters-item" aria-label="Filter: Completed">Completed</button>
+                <button class="todos-toolbar_filters-item" id="filter1" aria-label="Filter: All, is selected">All</button>
+                <button class="todos-toolbar_filters-item" id="filter2" aria-label="Filter: Active">Active</button>
+                <button class="todos-toolbar_filters-item" id="filter3" aria-label="Filter: Completed">Completed</button>
             </div>
 
             <button class="todos-toolbar_clear-completed">Clear completed</button>
