--- a/src/main/resources/templates/finalToDo.html
+++ b/src/main/resources/templates/finalToDo.html
@@ -2,6 +2,8 @@
 <html lang="en" xmlns:th="http://ww.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <meta name="_csrf" th:content="${_csrf.token}"/>
+    <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
     <title>Todo</title>
     <link rel="stylesheet" type="text/css" href="styles/default.css" media="all"/>
     <script src="js/mainJS.js" type="text/javascript"></script>
@@ -30,7 +32,7 @@
                     </div>
                 </div>
                     <div class="todos-list_item_text-w">
-                        <div class="todos-list_item_text" contenteditable="true" th:text="${it.getDescription()}">Text</div>
+                        <div class="todos-list_item_text" contenteditable="false" th:text="${it.getDescription()}">Text</div>
                     </div>
                 <div class = "todos-list_item_remove-action">
                     <div class = "todos-list_item_remove-action-fix">
